import {
  renderBrowserTs,
  MIN_SDK_PACKAGE,
  MIN_SDK_VERSION,
} from '../src/render/browser-ts';
import { eventsFromFixture } from './helpers/fixtures';

describe('renderBrowserTs', () => {
  it.each(['simple-track.json', 'multi-version.json', 'with-refs.json'])(
    'matches the snapshot for %s',
    async (file) => {
      const ts = await renderBrowserTs(eventsFromFixture(file));
      expect(ts).toMatchSnapshot();
    },
  );

  it('emits a generated header with CLI and SDK versions', async () => {
    const ts = await renderBrowserTs(eventsFromFixture('simple-track.json'));
    expect(ts).toContain(
      'Generated by @ht-sdks/events-cli@0.1.0 — do not edit.',
    );
    expect(ts).toContain(
      `Requires peer ${MIN_SDK_PACKAGE}@^${MIN_SDK_VERSION} or later.`,
    );
  });

  it('emits PascalCase interfaces named after wrapper names', async () => {
    const ts = await renderBrowserTs(eventsFromFixture('simple-track.json'));
    expect(ts).toMatch(/export interface TrackOrderCompletedDefault/);
    expect(ts).toMatch(/orderId/);
  });

  it('sorts events by wrapperName', async () => {
    const events = eventsFromFixture('multi-version.json').reverse();
    const ts = await renderBrowserTs(events);
    const v1 = ts.indexOf('trackOrderCompletedV1');
    const v2 = ts.indexOf('trackOrderCompletedV2');
    expect(v1).toBeGreaterThan(-1);
    expect(v2).toBeGreaterThan(-1);
    expect(v1).toBeLessThan(v2);
  });
});
