// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderBrowserTs matches the snapshot for multi-version.json 1`] = `
"/**
 * Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
 * Requires peer @ht-sdks/events-sdk-js-browser@^1.4.0 or later.
 */

import type { HtEventsBrowser, Options } from '@ht-sdks/events-sdk-js-browser';

export interface TrackOrderCompletedV1 {
    orderId?: string;
    [property: string]: unknown;
}

export interface TrackOrderCompletedV2 {
    orderId?: string;
    total?:   number;
    [property: string]: unknown;
}

let analytics: HtEventsBrowser | undefined;

export function setHtEvents(instance: HtEventsBrowser): void {
  analytics = instance;
}

function requireAnalytics(): HtEventsBrowser {
  if (analytics === undefined) {
    throw new Error('Call setHtEvents(analytics) before emitting events.');
  }
  return analytics;
}

function setAtPath(
  root: Record<string, unknown>,
  path: readonly string[],
  value: string,
): Record<string, unknown> {
  if (path.length === 0) return root;
  const clone: Record<string, unknown> = { ...root };
  let cursor = clone;
  for (let i = 0; i < path.length - 1; i += 1) {
    const key = path[i];
    const next = cursor[key];
    const child =
      next !== null && typeof next === "object" && !Array.isArray(next)
        ? { ...(next as Record<string, unknown>) }
        : {};
    cursor[key] = child;
    cursor = child;
  }
  cursor[path[path.length - 1]] = value;
  return clone;
}

function withSchemaVersion<T extends Record<string, unknown>>(
  data: T,
  options: Options | undefined,
  path: readonly string[] | undefined,
  version: string,
): { data: T; options: Options | undefined } {
  if (path === undefined || path.length === 0) {
    return { data, options };
  }
  const [head, ...rest] = path;
  if (head === "properties" || head === "traits") {
    return {
      data: setAtPath(data, rest, version) as T,
      options,
    };
  }
  if (head === "context") {
    const contextRoot =
      options?.context !== null &&
      typeof options?.context === "object" &&
      !Array.isArray(options.context)
        ? (options.context as Record<string, unknown>)
        : {};
    return {
      data,
      options: {
        ...options,
        context: setAtPath(contextRoot, rest, version),
      },
    };
  }
  return { data, options };
}

export function trackOrderCompletedV1(
  properties: TrackOrderCompletedV1,
  options?: Options,
): ReturnType<HtEventsBrowser['track']> {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    options,
    undefined,
    "v1",
  );
  return htevents.track("Order Completed", injected.data, injected.options);
}

export function trackOrderCompletedV2(
  properties: TrackOrderCompletedV2,
  options?: Options,
): ReturnType<HtEventsBrowser['track']> {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    options,
    undefined,
    "v2",
  );
  return htevents.track("Order Completed", injected.data, injected.options);
}

export const trackOrderCompleted = trackOrderCompletedV2;
"
`;

exports[`renderBrowserTs matches the snapshot for simple-track.json 1`] = `
"/**
 * Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
 * Requires peer @ht-sdks/events-sdk-js-browser@^1.4.0 or later.
 */

import type { HtEventsBrowser, Options } from '@ht-sdks/events-sdk-js-browser';

export interface TrackOrderCompletedDefault {
    orderId: string;
    total?:  number;
    [property: string]: unknown;
}

let analytics: HtEventsBrowser | undefined;

export function setHtEvents(instance: HtEventsBrowser): void {
  analytics = instance;
}

function requireAnalytics(): HtEventsBrowser {
  if (analytics === undefined) {
    throw new Error('Call setHtEvents(analytics) before emitting events.');
  }
  return analytics;
}

function setAtPath(
  root: Record<string, unknown>,
  path: readonly string[],
  value: string,
): Record<string, unknown> {
  if (path.length === 0) return root;
  const clone: Record<string, unknown> = { ...root };
  let cursor = clone;
  for (let i = 0; i < path.length - 1; i += 1) {
    const key = path[i];
    const next = cursor[key];
    const child =
      next !== null && typeof next === "object" && !Array.isArray(next)
        ? { ...(next as Record<string, unknown>) }
        : {};
    cursor[key] = child;
    cursor = child;
  }
  cursor[path[path.length - 1]] = value;
  return clone;
}

function withSchemaVersion<T extends Record<string, unknown>>(
  data: T,
  options: Options | undefined,
  path: readonly string[] | undefined,
  version: string,
): { data: T; options: Options | undefined } {
  if (path === undefined || path.length === 0) {
    return { data, options };
  }
  const [head, ...rest] = path;
  if (head === "properties" || head === "traits") {
    return {
      data: setAtPath(data, rest, version) as T,
      options,
    };
  }
  if (head === "context") {
    const contextRoot =
      options?.context !== null &&
      typeof options?.context === "object" &&
      !Array.isArray(options.context)
        ? (options.context as Record<string, unknown>)
        : {};
    return {
      data,
      options: {
        ...options,
        context: setAtPath(contextRoot, rest, version),
      },
    };
  }
  return { data, options };
}

export function trackOrderCompletedDefault(
  properties: TrackOrderCompletedDefault,
  options?: Options,
): ReturnType<HtEventsBrowser['track']> {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    options,
    ["context", "protocols", "schemaVersion"],
    "default",
  );
  return htevents.track("Order Completed", injected.data, injected.options);
}

export const trackOrderCompleted = trackOrderCompletedDefault;
"
`;

exports[`renderBrowserTs matches the snapshot for with-refs.json 1`] = `
"/**
 * Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
 * Requires peer @ht-sdks/events-sdk-js-browser@^1.4.0 or later.
 */

import type { HtEventsBrowser, Options } from '@ht-sdks/events-sdk-js-browser';

export interface IdentifyDefault {
    email?: string;
    [property: string]: unknown;
}

export interface TrackCartViewedDefault {
    amount:     number;
    currency:   string;
    itemCount?: number;
    [property: string]: unknown;
}

let analytics: HtEventsBrowser | undefined;

export function setHtEvents(instance: HtEventsBrowser): void {
  analytics = instance;
}

function requireAnalytics(): HtEventsBrowser {
  if (analytics === undefined) {
    throw new Error('Call setHtEvents(analytics) before emitting events.');
  }
  return analytics;
}

function setAtPath(
  root: Record<string, unknown>,
  path: readonly string[],
  value: string,
): Record<string, unknown> {
  if (path.length === 0) return root;
  const clone: Record<string, unknown> = { ...root };
  let cursor = clone;
  for (let i = 0; i < path.length - 1; i += 1) {
    const key = path[i];
    const next = cursor[key];
    const child =
      next !== null && typeof next === "object" && !Array.isArray(next)
        ? { ...(next as Record<string, unknown>) }
        : {};
    cursor[key] = child;
    cursor = child;
  }
  cursor[path[path.length - 1]] = value;
  return clone;
}

function withSchemaVersion<T extends Record<string, unknown>>(
  data: T,
  options: Options | undefined,
  path: readonly string[] | undefined,
  version: string,
): { data: T; options: Options | undefined } {
  if (path === undefined || path.length === 0) {
    return { data, options };
  }
  const [head, ...rest] = path;
  if (head === "properties" || head === "traits") {
    return {
      data: setAtPath(data, rest, version) as T,
      options,
    };
  }
  if (head === "context") {
    const contextRoot =
      options?.context !== null &&
      typeof options?.context === "object" &&
      !Array.isArray(options.context)
        ? (options.context as Record<string, unknown>)
        : {};
    return {
      data,
      options: {
        ...options,
        context: setAtPath(contextRoot, rest, version),
      },
    };
  }
  return { data, options };
}

export function identifyDefault(
  traits: IdentifyDefault,
  options?: Options,
): ReturnType<HtEventsBrowser['identify']> {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    traits as Record<string, unknown>,
    options,
    undefined,
    "default",
  );
  return htevents.identify(injected.data, injected.options);
}

export const identify = identifyDefault;

export function trackCartViewedDefault(
  properties: TrackCartViewedDefault,
  options?: Options,
): ReturnType<HtEventsBrowser['track']> {
  const htevents = requireAnalytics();
  const injected = withSchemaVersion(
    properties as Record<string, unknown>,
    options,
    undefined,
    "default",
  );
  return htevents.track("Cart Viewed", injected.data, injected.options);
}

export const trackCartViewed = trackCartViewedDefault;
"
`;
